ChangeLog
===========
This file contains a cronological history of changes/improvements and more
that have happened to the libwcl library

===========

2006-05-24
+ Added a number of macros (cfg/msvc.cfg) to support compiling under MSVC enabled with --enable-msvc
+ Added wrapmsvc.exe / .cpp to cfg/ these are used to support MSVC binaries

2006-05-16 benjsc
+ Added cfg directory for storing m4 macros
+ Use AM_CONFIG_HEADER in configure.ac so that it builds with automake 16
+ Added the REPO file, indicating Repository changes
o Moved src/* to src/wcl/*
o Use the makefile at the base level for subdirectories (avoids recursive make issue)
o make the command: make install install headers in the correct location
o Modify all network headers to correctly use #include <wcl/...>  