@@ -112,10 +112,10 @@ WCL_FRIDGE_CHECK
 # Test for Package Config
 # We need this for a lot of packages
 #
-AC_PATH_PROG(PKG_CONFIG, pkg-config)
-if test "x$PKG_CONFIG" = "x"; then
-	AC_MSG_ERROR([You need to install pkg-config])
-fi
+#AC_PATH_PROG(PKG_CONFIG, pkg-config)
+#if test "x$PKG_CONFIG" = "x"; then
+#	AC_MSG_ERROR([You need to install pkg-config])
+#fi
 
 #
 # Need the C++ Compiler, Installer and ranlib to strip libraries
@@ -162,6 +162,7 @@ echo "-----------------------------"
 #
 ##############################
 AC_CONFIG_FILES([Makefile
+		 src/Makefile
                  src/wcl/Makefile
 		])
 
