@@ -1,0 +1,6 @@
+# $Id$
+
+#
+# Indicate which directories to process
+#
+SUBDIRS=wcl
